# TTIT-OAIP

./: .gitignore  CMakeLists.txt
lw1/: CMakeLists.txt  main.cpp
lw10/: CMakeLists.txt  main.cpp
lw11/: CMakeLists.txt  main.cpp
lw12/StringClient/: CMakeLists.txt  main.cpp
lw12/StringLibrary/: CMakeLists.txt  StringLibrary.cpp  StringLibrary.h
lw13/: CMakeLists.txt  main.cpp
lw14/: CMakeLists.txt  main.cpp
lw15/: CMakeLists.txt  main.cpp
lw16/: CMakeLists.txt  main.cpp
lw2/: CMakeLists.txt  main.cpp
lw3/: CMakeLists.txt  main.cpp
lw4/: CMakeLists.txt  main.cpp
lw5/: CMakeLists.txt  main.cpp
lw6/: CMakeLists.txt  main.cpp
lw7/: CMakeLists.txt  main.cpp
lw8/: CMakeLists.txt  main.cpp
lw9/: CMakeLists.txt  main.cpp
