cmake_minimum_required(VERSION 3.26)

project(lw)

add_subdirectory(lw1)
add_subdirectory(lw2)
add_subdirectory(lw3)
add_subdirectory(lw4)
add_subdirectory(lw5)
add_subdirectory(lw6)
add_subdirectory(lw7)
add_subdirectory(lw8)
add_subdirectory(lw9)
add_subdirectory(lw10)
add_subdirectory(lw11)
add_subdirectory(lw12/StringLibrary)
add_subdirectory(lw12/StringClient)
add_subdirectory(lw13)
add_subdirectory(lw14)
